added desktop view

--- a/src/game.html
+++ b/src/game.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,15 @@
     <link rel="stylesheet" href="../styles/game.css">
     <title>Hangman</title>
 </head>
+
 <body>
     <div class="hero">HANGMAN</div>
-     <div class="game-view">
+    <div class="game-view">
         <img src="../media/hangman.png" alt="hangman">
         <div class="task"> __________</div>
-     </div>
-     <div class="letters">
+    </div>
+    <div class="hint-div">Hint: <span class="hint">Something related to some word or nothing</span> </div>
+    <div class="letters">
         <span class="letter">A</span>
         <span class="letter">A</span>
         <span class="letter">A</span>
@@ -38,8 +41,9 @@
         <span class="letter">A</span>
         <span class="letter">A</span>
         <span class="letter">A</span>
-     </div>
-     <div class="retry"><img src="../media/retry.png" alt="retry"></div>
+    </div>
+    <div class="retry"><img src="../media/retry.png" alt="retry"></div>
     <script src="game.js"></script>
 </body>
+
 </html>
