commented hardcoded letter btns

--- a/src/game.html
+++ b/src/game.html
@@ -12,11 +12,12 @@
 <body>
     <div class="hero">HANGMAN</div>
     <div class="game-view">
-        <img src="../media/hangman.png" alt="hangman">
+        <img src="../media/hangman.png" alt="hangman" id="hangman-img">
         <div class="task"> __________</div>
     </div>
     <div class="hint-div">Hint: <span class="hint">Something related to some word or nothing</span> </div>
     <div class="letters">
+        <!-- <span class="letter">A</span>
         <span class="letter">A</span>
         <span class="letter">A</span>
         <span class="letter">A</span>
@@ -39,8 +40,7 @@
         <span class="letter">A</span>
         <span class="letter">A</span>
         <span class="letter">A</span>
-        <span class="letter">A</span>
-        <span class="letter">A</span>
+        <span class="letter">A</span> -->
     </div>
     <div class="retry"><img src="../media/retry.png" alt="retry"></div>
     <script src="game.js"></script>
