removed hardcoded code

--- a/src/game.html
+++ b/src/game.html
@@ -13,9 +13,9 @@
     <div class="hero">HANGMAN</div>
     <div class="game-view">
         <img src="../media/hangman.png" alt="hangman" id="hangman-img">
-        <div class="task"> __________</div>
+        <div class="task"></div>
     </div>
-    <div class="hint-div">Hint: <span class="hint">Something related to some word or nothing</span> </div>
+    <div class="hint-div">Hint: <span class="hint"></span> </div>
     <div class="letters">
         <!-- <span class="letter">A</span>
         <span class="letter">A</span>
