made logo into link to home

--- a/src/game.html
+++ b/src/game.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="hero">HANGMAN</div>
+    <div class="hero"><a href="home.html">HANGMAN</a></div>
     <div class="game-view">
         <img src="../media/hangman.png" alt="hangman" id="hangman-img">
         <div class="task"></div>
