added onload sound effect

--- a/src/home.html
+++ b/src/home.html
@@ -16,7 +16,11 @@
 	<a href='game.html'><button class="gameon">
 			Let's go
 		</button></a>
-	<script src="app.js"></script>
+
+		<script>
+			const sound = new Audio('../media/audio/tadaa.mp3')
+			sound.play();
+		</script>
 </body>
 
 </html>
