added win sound effect

--- a/src/win.html
+++ b/src/win.html
@@ -20,5 +20,9 @@
 </head>
 <body>
     <img src="../media/giphy.gif" alt="">
+    <script>
+        const sound = new Audio('../media/audio/crowdCheering.mp3');
+        sound.play();
+    </script>
 </body>
 </html>
