added lost sound effect

--- a/src/lost.html
+++ b/src/lost.html
@@ -37,6 +37,10 @@
 
 <body>
     <h1>YOUR FRIEND IS DEAD</h1>
+    <script>
+        const sound = new Audio('../media/audio/thunder.mp3');
+        sound.play();
+    </script>
 </body>
 
 </html>
