added loading animation

--- a/src/game.html
+++ b/src/game.html
@@ -11,6 +11,9 @@
 
 <body>
     <div class="hero"><a href="home.html">HANGMAN</a></div>
+    <div class="loading" style="margin:1em; text-align:center">
+        <img src="../media/loading.gif.gif" alt="loading animation">
+    </div>
     <div class="game-view">
         <img src="../media/hangman.png" alt="hangman" id="hangman-img">
         <div class="task"></div>
