--- a/src/error.html
+++ b/src/error.html
@@ -42,7 +42,7 @@
     <h2>Sorry! There was a problem loading the game.</h2>
     <h3>This is totally our fault. Don't blame your life.</h3>
     <p>
-        Try reloading the <a href="home.html">game</a><br>
+        Try reloading the <a href="../home.html">game</a><br>
         If it's still not working, then maybe come back later.
     </p>
 </body>
