--- a/src/game.html
+++ b/src/game.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="hero"><a href="home.html">HANGMAN</a></div>
+    <div class="hero"><a href="../home.html">HANGMAN</a></div>
     <div class="loading" style="margin:1em; text-align:center">
         <img src="../media/loading.gif.gif" alt="loading animation">
     </div>
